# contracts-one

./: CNAME  asset-manifest.json  index.html
cli/: index.js  near.js  package.json
contract/: Cargo.toml  build.sh  compile_and_test.sh  expensive.sh
contract/res/: contracts_one.wasm
contract/src/: audit.rs  auditor.rs  certificate.rs  contract.rs  issue.rs  lib.rs  primitives.rs  project.rs  user.rs  version.rs
contract/tests/: general.rs
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.scss
frontend/src/components/: CertificateCard.js  Helpers.js  Links.js  ProjectCard.js
frontend/src/pages/: CLI.js  Certificates.js  Contract.js  Landing.js  Profile.js  ProjectInfo.js  Projects.js
static/css/: main.85135d44.chunk.css  main.85135d44.chunk.css.map  main.c79006ff.chunk.css  main.c79006ff.chunk.css.map
static/js/: 2.045b9fe2.chunk.js  2.045b9fe2.chunk.js.map  2.1db18912.chunk.js  2.1db18912.chunk.js.LICENSE.txt  2.1db18912.chunk.js.map  2.39e251fd.chunk.js  2.39e251fd.chunk.js.map  2.e3da0c58.chunk.js  2.e3da0c58.chunk.js.map  main.00199d95.chunk.js  main.00199d95.chunk.js.map  main.4954d9b3.chunk.js  main.4954d9b3.chunk.js.map  main.524fc085.chunk.js  main.524fc085.chunk.js.map  main.5764d8e9.chunk.js  main.5764d8e9.chunk.js.map  main.5af1d1f5.chunk.js  main.5af1d1f5.chunk.js.map  main.fc5e45e2.chunk.js  main.fc5e45e2.chunk.js.map
